[project]
name = "watergeo"
version = "0.0.8"
dynamic = [
    "dependencies",
]
description = "python package for water spatial analysis"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "watergeo",
]
license = {text = "MIT License"}
authors = [
  {name = "Xinming Zhang", email = "andyzxm1101@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
watergeo = "watergeo.cli:main"

[project.optional-dependencies]
all = [
    "watergeo[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["watergeo*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.8"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "watergeo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/Xinming Andy Zhang/watergeo"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"